# physwf-x-lab

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Physwf.vssettings  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  msvcpch.cmake  x-lab.sln  x-lab.vcxproj  x-lab.vcxproj.filters
HDRIViewer/: BilateralFiltering.cpp  CMakeLists.txt  Filtering.h  HDRIFile.cpp  HDRIFile.h  ToneMapping.c  ToneMapping.cpp  ToneMapping.cpp.orig  ToneMapping.h  ToneMapping_Curves.h  bmp.c  bmp.h  main.cpp  rebe.txt
JRenderer/: Application.cpp  Application.h  CMakeLists.txt  D3D11API.cpp  D3D11API.h  D3D12Demo.cpp  D3D12RHI.cpp  D3D12RHI.h  DrawingPolicy.h  Mesh.h  MeshBatch.h  Primitives.cpp  Primitives.h  RenderResources.cpp  RenderResources.h  Renderer.cpp  Renderer.h  Resource.h  Scene.h  SceneView.h  Shader.cpp  Shader.h  ShadingModels.cpp  ShadingModels.h  ShadowDemo.cpp  ShadowDemo.h  SkyBoxDemo.cpp  SkyBoxDemo.h  StaticMesh.cpp  StaticMesh.h  StaticMeshDrawList.h  TriangleDemo.cpp  TriangleDemo.h  d3d12demo.h  demo.rc  demo.vcxproj  demo.vcxproj.filters  main.cpp
JRenderer/Shaders/: Floor.hlsl  GenCubeMap.hlsl  GenEnvironmentMap.hlsl  GenIntegratedBRDF.hlsl  GenIrradianceMap.hlsl  GenPrefilterEnvironment.hlsl  Marry.hlsl  PBRTools.hlsl  PCSS.hlsl  PhongModel.hlsl  PrecomputeIBL.hlsl  RealTimeIBL.hlsl  Sampling.hlsl  SkyBox.hlsl  SpecularIBL.hlsl  Tonemap.hlsl  microfacet.hlsl  quad.hlsl  triangle.hlsl
Splines/: Algebra.h  Bezier.h  CMakeLists.txt  CubicSpline.h  Geometry.h  MathUnitTest.cpp  main.cpp
dx11demo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Actor.cpp  Actor.h  Allocator2D.h  AtmosphereRendering.cpp  AtmosphereRendering.h  BasePass.hlsl  BasePassRendering.cpp  BasePassRendering.h  CMakeLists.txt  Camera.cpp  Camera.h  D3D11RHI.cpp  D3D11RHI.h  D3D11Triangle.cpp  DeferredShading.cpp  DeferredShading.h  DeferredShadingCommon.hlsl  DepthOnlyPass.hlsl  DepthOnlyPath.h  DepthOnlyRendering.cpp  DepthOnlyRendering.h  DisjoinSet.h  DrawingPolicy.cpp  DrawingPolicy.h  EnumAdapter.cpp  FBXImporter.cpp  FBXImporter.h  GameViewport.cpp  GameViewport.h  LayoutUV.h  Light.h  LightPass.hlsl  LightRendering.cpp  LightRendering.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  (+25 more)
dx11demo/CompositionLighting/: CompositionLighting.cpp  CompositionLighting.h  PostProcessAmbientOcclution.cpp  PostProcessAmbientOcclution.h
dx11demo/Math/: UnrealMath.cpp  UnrealMath.h
dx11demo/Mesh/: Mesh.h
dx11demo/PostProcess/: SceneFilterRendering.cpp
dx11demo/RHI/: D3D11RHI.cpp  D3D11RHI.h
dx11demo/Renderer/: AtmosphereRendering.cpp  AtmosphereRendering.h  BasePassRendering.cpp  BasePassRendering.h  DeferredShading.cpp  DeferredShading.h  DepthOnlyRendering.cpp  DepthOnlyRendering.h  LightRendering.cpp  LightRendering.h  RenderTargets.cpp  RenderTargets.h  SceneOcclusion.cpp  SceneOcclusion.h  ShadowRendering.cpp  ShadowRendering.h
dx11demo/Scene/: Actor.h  Camera.h  Light.h  Scene.cpp  World.cpp
dx11demo/Shaders/: AtmosphereCommon.hlsl  AtmosphericFogShader.hlsl  BSDF.hlsl  BasePassCommon.hlsl  BasePassPixelShader.hlsl  BasePassVertexShader.hlsl  CapsuleLight.hlsl  CapsuleLightIntegrate.hlsl  Common.hlsl  DeferredLightPixelShader.hlsl  DeferredLightUniform.hlsl  DeferredLightVertexShader.hlsl  DeferredLightingCommon.hlsl  DeferredShadingCommon.hlsl  Definitions.hlsl  DepthOnlyPass.hlsl  DrawRectangleParameters.hlsl  DynamicLightingCommon.hlsl  FastMath.hlsl  InstancedStereo.hlsl  LightAccumulator.hlsl  LocalVertexFactory.hlsl  LocalVertexFactoryCommon.hlsl  Material.hlsl  MaterialUniformBuffers.hlsl  Platform.hlsl  PrecomputedLightingBuffer.hlsl  Primitive.hlsl  Random.hlsl  RectLight.hlsl  SceneTexturesCommon.hlsl  (+11 more)
path_tracing/: BodyScattering.cpp  BodyScattering.h  Bounds.h  CMakeLists.txt  Camera.cpp  Camera.h  Colorimetry.h  Filter.cpp  Filter.h  Fresnel.cpp  Fresnel.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  Mathematics.cpp  Mathematics.h  Medium.h  Memory.cpp  Memory.h  Microfacet.cpp  Microfacet.h  ParallelFor.cpp  ParallelFor.h  PathTracing.cpp  PathTracing.h  RNG.h  RayTracing.cpp  RayTracing.h  Sampler.cpp  Sampler.h  SamplerIntegrator.cpp  SamplerIntegrator.h  Sampling.cpp  Sampling.h  Scene.cpp  Scene.h  SurfaceScattering.cpp  (+16 more)
pbrt/: CMakeLists.txt  geometry.h  main.cpp  material.h  pbrt.h  reflection.cpp  reflection.h  rng.h  sampler.cpp  sampler.h  spectrum.cpp  spectrum.h  sphere.pbrt
ray_tracing/: CMakeLists.txt  camera.cpp  camera.h  core.cpp  core.h  main.cpp  math.cpp  math.h  primitives.cpp  primitives.h  scene.cpp  scene.h  scene.txt
x0/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  libx0.vcxproj  libx0.vcxproj.filters  x0_export.h
x2/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  NAIL.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dllmain.cpp  gl.h  gl_buffer.cpp  gl_buffer.h  gl_context.cpp  gl_context.h  gl_frontend.cpp  gl_frontend.h  gl_memory.cpp  gl_memory.h  gl_objects.cpp  gl_pipeline.cpp  gl_pipeline.h  gl_pipeline_fs.cpp  gl_pipeline_ia.cpp  gl_pipeline_om.cpp  gl_pipeline_pa.cpp  gl_pipeline_rs.cpp  gl_pipeline_vs.cpp  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_utilities.h  gl_vertex_attribute.cpp  libx1.vcxproj  libx1.vcxproj.filters  libx2.vcxproj  libx2.vcxproj.filters  x1.sln  x2.sln
x3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  libx3.vcxproj  libx3.vcxproj.filters  x3.sln  x3_export.h
x4/: CMakeLists.txt  X4.h  libx4.vcxproj  libx4.vcxproj.filters
x5/: Address.cpp  Address.h  BlockQueue.h  ByteArray.h  CMakeLists.txt  Node.cpp  Node.h  RingBuffer.h  Socket.cpp  Socket.h  X5.h  libx5.vcxproj  libx5.vcxproj.filters
x6/: CMakeLists.txt
x7/: CMakeLists.txt
x8/: CMakeLists.txt  Log.h  Math2D.h  NevMesh.cpp  NevMesh.h  PathFinder.cpp  PathFinder.h  Poly2D.cpp  Poly2D.h  Stats.h  Waypoints.h
x9/: Atmosphere.cpp  Atmosphere.h  CMakeLists.txt  ToneMapping.cpp  ToneMapping.h  X9.h  colorimetry.h
(+785 files in other folders)
